force-app/src/objects/TR1__Scheduler_Utilities__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__AM_EndTime__c</fullName>
        <label>AM EndTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__AM_StartTime__c</fullName>
        <label>AM StartTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Allow_to_Edit_Delete_Days_on_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow to Edit/Delete Days on Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Available_color_code__c</fullName>
        <label>Available color code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Booked_color_code__c</fullName>
        <label>Booked color code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Calendar_Buttons__c</fullName>
        <description>The field for controlling Week and Month buttons</description>
        <label>Calendar Buttons</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Calendar_Date_Format__c</fullName>
        <label>Calendar Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Shift__c</fullName>
        <label>Default Shift</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_User_Owned_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to default User owned records in Scheduler Pages</description>
        <label>Default User Owned Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Week_Start_Day__c</fullName>
        <label>Default Week Start Day</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Distance_Field__c</fullName>
        <description>the proximity location field or the distance field which is of type integer is specified here for both job and candidate scheduler</description>
        <label>Distance Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Distance_Units__c</fullName>
        <description>either km or mi are used for this and it is used to calculate distance based on the unit value</description>
        <label>Distance Units</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EndTime__c</fullName>
        <label>EndTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hide_Book_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to hide the standard book button on the scheduler</description>
        <label>Hide Book Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__My_Records_Field__c</fullName>
        <description>return records of the current user you need to provide a checkbox field here</description>
        <label>My Records Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ObjectPrefixCA__c</fullName>
        <label>ObjectPrefixCA</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ObjectPrefixJA__c</fullName>
        <label>ObjectPrefixJA</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PM_EndTime__c</fullName>
        <label>PM EndTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PM_StartTime__c</fullName>
        <label>PM StartTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SendConfirmation_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendConfirmation Later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__StartTime__c</fullName>
        <label>StartTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Tentative_Color_Code__c</fullName>
        <description>Color code used to display tentative bookings in Candidate,Vacancy, CR calendar &amp; Scheduler pages</description>
        <label>Tentative Color Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Today_Button__c</fullName>
        <description>The field for controlling the Today button</description>
        <label>Today Button</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Unavailable_color_code__c</fullName>
        <label>Unavailable color code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Workshift_Distance_Field__c</fullName>
        <label>Workshift Distance Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__calenderView__c</fullName>
        <description>Default view for Candidate Calendar</description>
        <inlineHelpText>month / agendaWeek / agendaDay</inlineHelpText>
        <label>calenderView</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__defaultweekstartdaynumber__c</fullName>
        <label>Defaultweekstartdaynumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__isFullDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFullDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__isMedRecruitAdditionalFilters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMedRecruitAdditionalFilters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__isSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__is_Clone__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__is_Create_Vacancy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Create Vacancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__is_Switch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Switch</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduler Utility</label>
</CustomObject>